envs/prod/ingress.yaml
---
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: blog
  labels:
    app: blog
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  rules:
  - host: blog.kaese.space
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: blog
              port:
                number: 80
  tls:
  - hosts:
    - blog.kaese.space
    secretName: letsencrypt-prod
---
